--- a/css3-menu.html
+++ b/css3-menu.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Minimo</title>
-	<link rel="stylesheet" type="text/css" href="navigation.css">
+	<link rel="stylesheet" type="text/css" href="css3-navigation.css">
 	<style type="text/css">
 		body {
 			background: url('../main/Minimo - CSS3 Menu/img/sf.png');
