image link updated

--- a/css3-menu.html
+++ b/css3-menu.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css3-navigation.css">
 	<style type="text/css">
 		body {
-			background: url('../main/Minimo - CSS3 Menu/img/sf.png');
+			background: url('img/sf.png');
 		}
 
 		.nav {
