Pattern.png added

--- a/css3-menu.html
+++ b/css3-menu.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Minimo</title>
+  <title>Simple Minimal CSS3 Navigation by W3update.com</title>
+
 	<link rel="stylesheet" type="text/css" href="css3-navigation.css">
 	<style type="text/css">
 		body {
-			background: url('img/sf.png');
+			background: url('img/pattern.png');
 		}
 
 		.nav {
